#
# $Id: configure.in,v 1.4 1997/05/19 22:04:03 hubbe Exp $
#
# Configure script for the oracle module
#

AC_INIT(oracle.c)
AC_CONFIG_HEADER(config.h)

sinclude(../module_configure.in)

ORACLE_LIBS=""

AC_ARG_WITH(oracle,  [  --without-oracle       no support for the Oracle databases],[],[with_oracle=yes])

if test x$with_oracle = xyes; then

  AC_MSG_CHECKING(if \$ORACLE_HOME is set)

  AC_CACHE_VAL(pike_cv_oracle_oracle_home, [
    if test x"$ORACLE_HOME" = x; then
      pike_cv_oracle_oracle_home=no
    else
      pike_cv_oracle_oracle_home="$ORACLE_HOME"
    fi
  ])

  AC_MSG_RESULT($pike_cv_oracle_oracle_home)

  if test x"$pike_cv_oracle_oracle_home" = xno; then :; else
    AC_DEFINE_UNQUOTED(ORACLE_HOME, "${pike_cv_oracle_oracle_home}")
  fi

  AC_MSG_CHECKING(if \$ORACLE_SID is set)

  AC_CACHE_VAL(pike_cv_oracle_oracle_sid, [
    if test x"$ORACLE_SID" = x; then
      pike_cv_oracle_oracle_sid=no
    else
      pike_cv_oracle_oracle_sid="$ORACLE_SID"
    fi
  ])

  AC_MSG_RESULT($pike_cv_oracle_oracle_sid)

  if test x"$pike_cv_oracle_oracle_sid" = xno; then :; else
    AC_DEFINE_UNQUOTED(ORACLE_SID, "${pike_cv_oracle_oracle_sid}")
  fi

  AC_MSG_CHECKING(for Oracle oratab)

  oratab_locations="/var/opt/oracle/oratab"

  AC_CACHE_VAL(pike_cv_oracle_oratab_file, [

    for pike_cv_oracle_oratab_file in $oratab_locations no; do
      if test -f $pike_cv_oracle_oratab_file; then
        break
      else
        :
      fi
    done

  ])

  AC_MSG_RESULT($pike_cv_oracle_oratab_file)

  AC_MSG_CHECKING(for Oracle libraries)

  echo no > conftest
      
  if test x"$pike_cv_oracle_oracle_home" != xno -a -f "$pike_cv_oracle_oracle_home/lib/libclient.a"; then

    echo "$pike_cv_oracle_oracle_home/lib" > conftest

  else
    if test x"$pike_cv_oracle_oratab_file" = xno; then :; else

      sed -e '/^#/d' < $pike_cv_oracle_oratab_file | while IFS=":" read sid dir bootstart; do
        if test -d "$dir/." -a -f "$dir/lib/libclient.a"; then
	  if test x"$pike_cv_oracle_oracle_home" = xno; then
            AC_DEFINE_UNQUOTED(ORACLE_HOME, "${dir}")
	  else
	    :
	  fi
	  if test x"$pike_cv_oracle_oracle_sid" = xno; then
            AC_DEFINE_UNQUOTED(ORACLE_SID, "${sid}")
	  else
	    :
	  fi
 	  echo "$dir/lib" > conftest
	  break
        else
	  :
        fi
      done
    fi
  fi

  oracle_lib_dir="`cat oracle_lib_dir`"

  AC_MSG_RESULT($oracle_lib_dir)

  AC_MSG_CHECKING(for Oracle includes)

  echo no > conftest

  if test x"$pike_cv_oracle_oracle_home" != xno -a -f "$pike_cv_oracle_oracle_home/rdbms/demo/ocidfn.h"; then

    echo "$pike_cv_oracle_oracle_home/rdbms/demo" > conftest

  else
    if test x"$pike_cv_oracle_oratab_file" = xno; then :; else
      
      sed -e '/^#/d' < $pike_cv_oracle_oratab_file | while IFS=":" read sid dir bootstart; do
        if test -d "$dir/." -a -f "$dir/rdbms/demo/ocidfn.h"; then
	  echo "$dir/rdbms/demo" > conftest
	  break
        else
	  :
        fi
      done
    fi
  fi

  oracle_include_dir="`cat conftest`"

  AC_MSG_RESULT($oracle_include_dir)

  AC_MSG_CHECKING(for sysliblist)

  AC_CACHE_VAL(pike_cv_oracle_sysliblist, [

    echo no > conftest

    if test x"$pike_cv_oracle_oracle_home" != xno -a -f "$pike_cv_oracle_oracle_home/rdbms/lib/sysliblist"; then

      echo "$pike_cv_oracle_oracle_home/rdbms/lib/sysliblist" > conftest

    else
      if test x"$pike_cv_oracle_oratab_file" = xno; then :; else
      
        sed -e '/^#/d' < $pike_cv_oracle_oratab_file | while IFS=":" read sid dir bootstart; do
          if test -d "$dir/." -a -f "$dir/rdbms/lib/sysliblist"; then
  	    echo "$dir/rdbms/lib/sysliblist" > conftest
	    break
          else
	    :
          fi
        done
      fi
    fi

    oracle_sysliblist="`cat conftest`"

    if test x"$oracle_sysliblist" = xno; then
      pike_cv_oracle_sysliblist=""
    else
      pike_cv_oracle_sysliblist="`cat "$oracle_sysliblist"`"
    fi
  ])

  AC_MSG_RESULT($pike_cv_oracle_sysliblist)

  rm -f conftest
  AC_CHECK_LIB(aio, aioread, [oracle_aio=-laio], [oracle_aio=""])

  if test "x$oracle_lib_dir" = xno -o "x$oracle_include_dir" = xno; then :; else

    CPPFLAGS="-I\"$oracle_include_dir\" ${CPPFLAGS}"

    ORACLE_LIBS="-L\"$oracle_lib_dir\" -lclient -lsqlnet -lncr -lsqlnet -lclient -lcommon -lgeneric -lsqlnet -lncr -lsqlnet -lclient -lcommon -lgeneric -lepc -lnlsrtl3 -lc3v6 -lcore3 -lnlsrtl3 -lcore3 -lnlsrtl3 $pike_cv_oracle_sysliblist $oracle_aio -lm -lcore3"

    AC_DEFINE(HAVE_ORACLE)

  fi

else
  :
fi

AC_SUBST(ORACLE_LIBS)

AC_OUTPUT(Makefile,echo FOO >stamp-h )

