#
# $Id: configure.in,v 1.3 2001/02/13 13:36:46 mirar Exp $
#
AC_INIT(pdflib_glue.c)
AC_CONFIG_HEADER(pdf_machine.h)
AC_ARG_WITH(libpdf,     [  --with(out)-libpdf       Support PDF through PDFlib],[],[with_libpdf=yes])
AC_ARG_WITH(libpanda,     [  --with(out)-libpanda   Support PDF through libpanda],[],[with_libpanda=yes])

AC_MODULE_INIT()

PIKE_FEATURE_WITHOUT(PDF_PDFlib,PDF.PDFlib.........)

if test x$with_libpdf = xyes ; then
  PIKE_FEATURE_NODEP(PDF_PDFlib,PDF.PDFlib.........)

  AC_CHECK_HEADERS(pdflib.h)
  if test x$ac_cv_header_pdflib_h = xyes ; then

# PDFlib might need these
    AC_CHECK_LIB(png, png_read_image, [ LIBS="${LIBS-} -lpng" ])
    AC_CHECK_LIB(z,   deflate,        [ LIBS="${LIBS-} -lz" ])
    AC_CHECK_LIB(tiff,TIFFOpen,       [ LIBS="${LIBS-} -ltiff" ])

# now check
    AC_CHECK_LIB(pdf, PDF_boot, [
      AC_DEFINE(HAVE_LIBPDF) 
      LIBS="${LIBS-} -lpdf"
      PIKE_FEATURE_OK(PDF_PDFlib,PDF.PDFlib.........)
      ])

  fi
fi

PIKE_FEATURE_WITHOUT(PDF_Panda,PDF.Panda..........)

if test x$with_libpanda = xyes ; then

  PIKE_FEATURE_NODEP(PDF_Panda,PDF.Panda..........)

  AC_CHECK_HEADERS(panda/functions.h)
  if test x$ac_cv_header_panda_functions_h = xyes ; then

# libpanda might need these
    AC_CHECK_LIB(tiff,TIFFOpen,       [ LIBS="${LIBS-} -ltiff" ])

# now check
    AC_CHECK_LIB(panda, settitle, [
      AC_DEFINE(HAVE_LIBPANDA) 
      LIBS="${LIBS-} -lpanda"

      PIKE_FEATURE_OK(PDF_Panda,PDF.Panda..........)
      ])

  fi
fi

AC_OUTPUT(Makefile,echo FOO >stamp-h )


